--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1048</width>
+    <width>831</width>
     <height>523</height>
    </rect>
   </property>
@@ -17,9 +17,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>60</x>
       <y>130</y>
-      <width>671</width>
+      <width>201</width>
       <height>61</height>
      </rect>
     </property>
@@ -38,9 +38,9 @@
    <widget class="QSlider" name="Slider">
     <property name="geometry">
      <rect>
-      <x>49</x>
+      <x>30</x>
       <y>340</y>
-      <width>961</width>
+      <width>711</width>
       <height>20</height>
      </rect>
     </property>
@@ -51,7 +51,7 @@
    <widget class="QPushButton" name="dir">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>210</x>
       <y>400</y>
       <width>51</width>
       <height>41</height>
@@ -67,7 +67,7 @@
    <widget class="QPushButton" name="play">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>330</x>
       <y>400</y>
       <width>47</width>
       <height>41</height>
@@ -83,7 +83,7 @@
    <widget class="QPushButton" name="video">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>440</x>
       <y>400</y>
       <width>51</width>
       <height>41</height>
@@ -99,13 +99,39 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>340</y>
+      <width>31</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>340</y>
+      <width>31</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1048</width>
+     <width>831</width>
      <height>28</height>
     </rect>
    </property>
