--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -125,6 +125,19 @@
      <string/>
     </property>
    </widget>
+   <widget class="QPushButton" name="Loop">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>400</y>
+      <width>51</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
