--- a/pic.qrc
+++ b/pic.qrc
@@ -13,5 +13,6 @@
         <file>icon/medium_volume.png</file>
         <file>icon/max_volume.png</file>
         <file>icon/bg.png</file>
+        <file>icon/Music.png</file>
     </qresource>
 </RCC>
