--- a/pic.qrc
+++ b/pic.qrc
@@ -15,5 +15,6 @@
         <file>icon/bg.png</file>
         <file>icon/Music.png</file>
         <file>icon/delete.png</file>
+        <file>icon/up.png</file>
     </qresource>
 </RCC>
