--- a/pic.qrc
+++ b/pic.qrc
@@ -26,5 +26,20 @@
         <file>icon/maxresdefault.jpg</file>
         <file>icon/pian.png</file>
         <file>icon/下载.png</file>
+        <file>icon/last_song_w.png</file>
+        <file>icon/loop_w.png</file>
+        <file>icon/next_song_w.png</file>
+        <file>icon/pause_w.png</file>
+        <file>icon/playlist_w.png</file>
+        <file>icon/play_w.png</file>
+        <file>icon/random_play_w.png</file>
+        <file>icon/volume_w.png</file>
+        <file>icon/关闭.png</file>
+        <file>icon/快进右.png</file>
+        <file>icon/快进左.png</file>
+        <file>icon/设置.png</file>
+        <file>icon/锁定_o.png</file>
+        <file>icon/词表权益.png</file>
+        <file>icon/解锁.png</file>
     </qresource>
 </RCC>
