--- a/qml.qrc
+++ b/qml.qrc
@@ -7,6 +7,10 @@
     <file>qml/components/MusicItem.qml</file>
     <file>qml/components/MusicListWidget.qml</file>
     <file>qml/components/MusicListWidgetNet.qml</file>
+    <file>qml/components/ControlBar.qml</file>
+    <file>qml/components/PianWidget.qml</file>
+    <file>qml/components/ProcessSlider.qml</file>
+    <file>qml/components/VolumeSlider.qml</file>
     <file>qml/components/qmldir</file>
     </qresource>
 </RCC>
